--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name":        "Arbit/Periodic",
+    "name":        "arbit/periodic",
     "description": "Periodic is a fully unit tested PHP based task runner. It is supposed to deliver a basic implementation for managing all kinds of recurring tasks and events inside your web application.",
     "minimum-stability": "dev",
     "version":     "0.1-dev",
@@ -8,7 +8,7 @@
         "url":  "https://github.com/Arbitracker/XML"
     } ],
     "require":      {
-        "Arbit/XML": "*"
+        "arbit/xml": "*"
     },
     "config":       {
         "vendor-dir": "src/library"
