--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,8 @@
 {
     "name":        "arbit/periodic",
     "description": "Periodic is a fully unit tested PHP based task runner. It is supposed to deliver a basic implementation for managing all kinds of recurring tasks and events inside your web application.",
-    "minimum-stability": "dev",
-    "version":     "0.1-dev",
-    "repositories": [ {
-        "type": "vcs",
-        "url":  "https://github.com/Arbitracker/XML"
-    } ],
     "require":      {
-        "arbit/xml": "*"
+        "arbit/xml": "dev-master"
     },
     "config":       {
         "vendor-dir": "src/library"
