--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name":        "arbit/periodic",
     "description": "Periodic is a fully unit tested PHP based task runner. It is supposed to deliver a basic implementation for managing all kinds of recurring tasks and events inside your web application.",
     "require":      {
-        "arbit/xml": "dev-master"
+        "arbit/xml": "*"
     },
     "config":       {
         "vendor-dir": "src/library"
