--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name":        "arbit/periodic",
     "description": "Periodic is a fully unit tested PHP based task runner. It is supposed to deliver a basic implementation for managing all kinds of recurring tasks and events inside your web application.",
+    "license": "LGPL-3.0+",
     "require":      {
         "arbit/xml": "*"
     },
